# cmakeTest

helloLib/lib/: CMakeLists.txt  hello.cpp  hello.h
main/: CMakeLists.txt
main/lib/: libhello.so.dylib
main/src/: CMakeLists.txt  main.cpp
